update icon file names and font

--- a/src/main/webapp/icons/font/SynapseIcons.html
+++ b/src/main/webapp/icons/font/SynapseIcons.html
@@ -54,11 +54,11 @@
 
         @font-face {
     font-family: "SynapseIcons";
-    src: url("./SynapseIcons.eot?8c12987b742f6a8205080a99999eb866?#iefix") format("embedded-opentype"),
-url("./SynapseIcons.woff2?8c12987b742f6a8205080a99999eb866") format("woff2"),
-url("./SynapseIcons.woff?8c12987b742f6a8205080a99999eb866") format("woff"),
-url("./SynapseIcons.ttf?8c12987b742f6a8205080a99999eb866") format("truetype"),
-url("./SynapseIcons.svg?8c12987b742f6a8205080a99999eb866#SynapseIcons") format("svg");
+    src: url("./SynapseIcons.eot?fccf84490733ad331acbdc1b694f5ce3?#iefix") format("embedded-opentype"),
+url("./SynapseIcons.woff2?fccf84490733ad331acbdc1b694f5ce3") format("woff2"),
+url("./SynapseIcons.woff?fccf84490733ad331acbdc1b694f5ce3") format("woff"),
+url("./SynapseIcons.ttf?fccf84490733ad331acbdc1b694f5ce3") format("truetype"),
+url("./SynapseIcons.svg?fccf84490733ad331acbdc1b694f5ce3#SynapseIcons") format("svg");
 }
 
 i {
@@ -76,76 +76,76 @@ i[class^="syn-"]:before, i[class*=" syn-"]:before {
     -moz-osx-font-smoothing: grayscale;
 }
 
-.syn-icon-chevron_down:before {
+.syn-check-circle:before {
     content: "\f101";
 }
-.syn-icon-chevron_up:before {
+.syn-check:before {
     content: "\f102";
 }
-.syn-icon-close:before {
+.syn-chevron-down:before {
     content: "\f103";
 }
-.syn-icon-create_folder:before {
+.syn-chevron-up:before {
     content: "\f104";
 }
-.syn-icon-db:before {
+.syn-close:before {
     content: "\f105";
 }
-.syn-icon-delete:before {
+.syn-crash-helmet:before {
     content: "\f106";
 }
-.syn-icon-download:before {
+.syn-database:before {
     content: "\f107";
 }
-.syn-icon-file:before {
+.syn-download:before {
     content: "\f108";
 }
-.syn-icon-help:before {
+.syn-ellipsis-v:before {
     content: "\f109";
 }
-.syn-icon-info:before {
+.syn-file:before {
     content: "\f10a";
 }
-.syn-icon-loading:before {
+.syn-folder-plus:before {
     content: "\f10b";
 }
-.syn-icon-menu:before {
+.syn-info-circle:before {
     content: "\f10c";
 }
-.syn-icon-no_access:before {
+.syn-loading:before {
     content: "\f10d";
 }
-.syn-icon-search:before {
+.syn-lock-open:before {
     content: "\f10e";
 }
-.syn-icon-sort:before {
+.syn-logo:before {
     content: "\f10f";
 }
-.syn-icon-star:before {
+.syn-minus-circle:before {
     content: "\f110";
 }
-.syn-icon-star_outline:before {
+.syn-question-circle:before {
     content: "\f111";
 }
-.syn-icon-success_checkmark:before {
+.syn-search:before {
     content: "\f112";
 }
-.syn-icon-sucess_circle:before {
+.syn-sort:before {
     content: "\f113";
 }
-.syn-icon-synapse_logo:before {
+.syn-star-o:before {
     content: "\f114";
 }
-.syn-icon-test:before {
+.syn-star:before {
     content: "\f115";
 }
-.syn-icon-timer:before {
+.syn-timer:before {
     content: "\f116";
 }
-.syn-icon-unlocked:before {
+.syn-trash-o:before {
     content: "\f117";
 }
-.syn-icon-warning:before {
+.syn-warning:before {
     content: "\f118";
 }
 
@@ -159,217 +159,217 @@ i[class^="syn-"]:before, i[class*=" syn-"]:before {
 
         <div class="preview">
             <span class="inner">
-                <i class="syn-icon-chevron_down"></i>
+                <i class="syn-check-circle"></i>
             </span>
             <br>
-            <span class='label'>icon-chevron_down</span>
+            <span class='label'>check-circle</span>
         </div>
 
 
         <div class="preview">
             <span class="inner">
-                <i class="syn-icon-chevron_up"></i>
+                <i class="syn-check"></i>
             </span>
             <br>
-            <span class='label'>icon-chevron_up</span>
+            <span class='label'>check</span>
         </div>
 
 
         <div class="preview">
             <span class="inner">
-                <i class="syn-icon-close"></i>
+                <i class="syn-chevron-down"></i>
             </span>
             <br>
-            <span class='label'>icon-close</span>
+            <span class='label'>chevron-down</span>
         </div>
 
 
         <div class="preview">
             <span class="inner">
-                <i class="syn-icon-create_folder"></i>
+                <i class="syn-chevron-up"></i>
             </span>
             <br>
-            <span class='label'>icon-create_folder</span>
+            <span class='label'>chevron-up</span>
         </div>
 
 
         <div class="preview">
             <span class="inner">
-                <i class="syn-icon-db"></i>
+                <i class="syn-close"></i>
             </span>
             <br>
-            <span class='label'>icon-db</span>
+            <span class='label'>close</span>
         </div>
 
 
         <div class="preview">
             <span class="inner">
-                <i class="syn-icon-delete"></i>
+                <i class="syn-crash-helmet"></i>
             </span>
             <br>
-            <span class='label'>icon-delete</span>
+            <span class='label'>crash-helmet</span>
         </div>
 
 
         <div class="preview">
             <span class="inner">
-                <i class="syn-icon-download"></i>
+                <i class="syn-database"></i>
             </span>
             <br>
-            <span class='label'>icon-download</span>
+            <span class='label'>database</span>
         </div>
 
 
         <div class="preview">
             <span class="inner">
-                <i class="syn-icon-file"></i>
+                <i class="syn-download"></i>
             </span>
             <br>
-            <span class='label'>icon-file</span>
+            <span class='label'>download</span>
         </div>
 
 
         <div class="preview">
             <span class="inner">
-                <i class="syn-icon-help"></i>
+                <i class="syn-ellipsis-v"></i>
             </span>
             <br>
-            <span class='label'>icon-help</span>
+            <span class='label'>ellipsis-v</span>
         </div>
 
 
         <div class="preview">
             <span class="inner">
-                <i class="syn-icon-info"></i>
+                <i class="syn-file"></i>
             </span>
             <br>
-            <span class='label'>icon-info</span>
+            <span class='label'>file</span>
         </div>
 
 
         <div class="preview">
             <span class="inner">
-                <i class="syn-icon-loading"></i>
+                <i class="syn-folder-plus"></i>
             </span>
             <br>
-            <span class='label'>icon-loading</span>
+            <span class='label'>folder-plus</span>
         </div>
 
 
         <div class="preview">
             <span class="inner">
-                <i class="syn-icon-menu"></i>
+                <i class="syn-info-circle"></i>
             </span>
             <br>
-            <span class='label'>icon-menu</span>
+            <span class='label'>info-circle</span>
         </div>
 
 
         <div class="preview">
             <span class="inner">
-                <i class="syn-icon-no_access"></i>
+                <i class="syn-loading"></i>
             </span>
             <br>
-            <span class='label'>icon-no_access</span>
+            <span class='label'>loading</span>
         </div>
 
 
         <div class="preview">
             <span class="inner">
-                <i class="syn-icon-search"></i>
+                <i class="syn-lock-open"></i>
             </span>
             <br>
-            <span class='label'>icon-search</span>
+            <span class='label'>lock-open</span>
         </div>
 
 
         <div class="preview">
             <span class="inner">
-                <i class="syn-icon-sort"></i>
+                <i class="syn-logo"></i>
             </span>
             <br>
-            <span class='label'>icon-sort</span>
+            <span class='label'>logo</span>
         </div>
 
 
         <div class="preview">
             <span class="inner">
-                <i class="syn-icon-star"></i>
+                <i class="syn-minus-circle"></i>
             </span>
             <br>
-            <span class='label'>icon-star</span>
+            <span class='label'>minus-circle</span>
         </div>
 
 
         <div class="preview">
             <span class="inner">
-                <i class="syn-icon-star_outline"></i>
+                <i class="syn-question-circle"></i>
             </span>
             <br>
-            <span class='label'>icon-star_outline</span>
+            <span class='label'>question-circle</span>
         </div>
 
 
         <div class="preview">
             <span class="inner">
-                <i class="syn-icon-success_checkmark"></i>
+                <i class="syn-search"></i>
             </span>
             <br>
-            <span class='label'>icon-success_checkmark</span>
+            <span class='label'>search</span>
         </div>
 
 
         <div class="preview">
             <span class="inner">
-                <i class="syn-icon-sucess_circle"></i>
+                <i class="syn-sort"></i>
             </span>
             <br>
-            <span class='label'>icon-sucess_circle</span>
+            <span class='label'>sort</span>
         </div>
 
 
         <div class="preview">
             <span class="inner">
-                <i class="syn-icon-synapse_logo"></i>
+                <i class="syn-star-o"></i>
             </span>
             <br>
-            <span class='label'>icon-synapse_logo</span>
+            <span class='label'>star-o</span>
         </div>
 
 
         <div class="preview">
             <span class="inner">
-                <i class="syn-icon-test"></i>
+                <i class="syn-star"></i>
             </span>
             <br>
-            <span class='label'>icon-test</span>
+            <span class='label'>star</span>
         </div>
 
 
         <div class="preview">
             <span class="inner">
-                <i class="syn-icon-timer"></i>
+                <i class="syn-timer"></i>
             </span>
             <br>
-            <span class='label'>icon-timer</span>
+            <span class='label'>timer</span>
         </div>
 
 
         <div class="preview">
             <span class="inner">
-                <i class="syn-icon-unlocked"></i>
+                <i class="syn-trash-o"></i>
             </span>
             <br>
-            <span class='label'>icon-unlocked</span>
+            <span class='label'>trash-o</span>
         </div>
 
 
         <div class="preview">
             <span class="inner">
-                <i class="syn-icon-warning"></i>
+                <i class="syn-warning"></i>
             </span>
             <br>
-            <span class='label'>icon-warning</span>
+            <span class='label'>warning</span>
         </div>
 
 
