fix case of synapseicons.css in portal.html

--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -73,7 +73,7 @@
 				head.load("//cdnjs.cloudflare.com/ajax/libs/swfobject/2.2/swfobject.min.js");
 				head.load(cdnEndpoint + "js/jquery.tablesorter.min.js");
 				head.load(cdnEndpoint + "js/jquery.tablesorter.scinot.js");
-				head.load(cdnEndpoint + "icons/font/SynapseIcons.css");
+				head.load(cdnEndpoint + "icons/font/synapseicons.css");
 				head.load("//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css");
 				head.load(cdnEndpoint + "js/highlight.pack.js");
 				head.load(cdnEndpoint + "js/init-nchart.js");
