transition from loading into main app (opacity from 0 to 1 in .3s)

--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -73,7 +73,7 @@
 				head.load("//cdnjs.cloudflare.com/ajax/libs/swfobject/2.2/swfobject.min.js");
 				head.load(cdnEndpoint + "js/jquery.tablesorter.min.js");
 				head.load(cdnEndpoint + "js/jquery.tablesorter.scinot.js");
-				head.load(cdnEndpoint + "icons/font/synapseicons.css");
+				head.load(cdnEndpoint + "icons/font/synapseicons.css?v=1");
 				head.load("//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css");
 				head.load(cdnEndpoint + "js/highlight.pack.js");
 				head.load(cdnEndpoint + "js/init-nchart.js");
@@ -141,12 +141,12 @@
 			<div id="alertWrapper">
 				<div id="alertContainer"></div>
 			</div>
-			<div id="initialLoadingUI" style="padding-top: 180px">
+			<div id="initialLoadingUI" class="fullOpacity" style="padding-top: 180px; position: absolute; left:0%; right:0%;margin: 0 auto;">
 				<div class="spinner" style="width:80px; height:80px; background-size:80px 80px;"> </div>
 				<h4 style="color: #1e7098; margin-top: 10px; font-family: Sans-serif; text-align:center">Loading...</h4>
 			</div>
-			<div id="headerPanel"></div>
-			<div id="rootPanel"></div>
+			<div id="headerPanel" class="zeroOpacity"></div>
+			<div id="rootPanel" class="zeroOpacity"></div>
 			<div id="footerPanel"></div>
 		</div>
 		<div class="clear"></div>
