initial loading UI jumps around with absolute positioning.  revert

--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -141,7 +141,7 @@
 			<div id="alertWrapper">
 				<div id="alertContainer"></div>
 			</div>
-			<div id="initialLoadingUI" class="fullOpacity" style="padding-top: 180px; position: absolute; left:0%; right:0%;margin: 0 auto;">
+			<div id="initialLoadingUI" style="padding-top: 180px">
 				<div class="spinner" style="width:80px; height:80px; background-size:80px 80px;"> </div>
 				<h4 style="color: #1e7098; margin-top: 10px; font-family: Sans-serif; text-align:center">Loading...</h4>
 			</div>
