--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -93,6 +93,8 @@
 				head.load("https://cdnjs.cloudflare.com/ajax/libs/croppie/2.6.2/croppie.min.css");
 				head.load("//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css");
 				head.load("//ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.css");
+				head.load(cdnEndpoint + "js/linkify.min.js");
+				head.load(cdnEndpoint + "js/linkify-string.min.js");
 			};
 			script.src = cdnEndpoint + "js/head.load.min.js";
 			document.head.appendChild(script);
