--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -68,7 +68,7 @@
 				head.load("//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js");
 				head.load("//ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js");
 				head.load("https://cdn.pendo.io/agent/static/f155f8f7-30b9-4cc3-671a-70f99f803504/pendo.js");
-				head.load("//cdn.jsdelivr.net/npm/moment@2.22.1/min/moment.min.js");
+				head.load("//cdn.jsdelivr.net/npm/moment@2.22.2/min/moment.min.js");
 				head.load("//cdnjs.cloudflare.com/ajax/libs/jsPlumb/2.1.8/jsPlumb.min.js");
 				head.load("//cdnjs.cloudflare.com/ajax/libs/swfobject/2.2/swfobject.min.js");
 				head.load(cdnEndpoint + "js/jquery.tablesorter.min.js");
@@ -84,13 +84,13 @@
 				head.load(cdnEndpoint + "js/xss.min.js");
 				head.load("//cdnjs.cloudflare.com/ajax/libs/pica/4.1.1/pica.min.js");
 				head.load("//www.google-analytics.com/analytics.js");
-				head.load("https://unpkg.com/react@16.2.0/umd/react.production.min.js");
-				head.load("https://unpkg.com/react-dom@16.2.0/umd/react-dom.production.min.js");
-				head.load("https://cdnjs.cloudflare.com/ajax/libs/croppie/2.6.2/croppie.min.js");
+				head.load("//unpkg.com/react@16/umd/react.production.min.js");
+				head.load("//unpkg.com/react-dom@16/umd/react-dom.production.min.js");
+				head.load("//cdnjs.cloudflare.com/ajax/libs/croppie/2.6.2/croppie.min.js");
 				head.load("//cdnjs.cloudflare.com/ajax/libs/spark-md5/3.0.0/spark-md5.min.js");
 				head.load(cdnEndpoint + "js/diff/diffview.css");
 				head.load(cdnEndpoint + "css/details-shim.min.css");
-				head.load("https://cdnjs.cloudflare.com/ajax/libs/croppie/2.6.2/croppie.min.css");
+				head.load("//cdnjs.cloudflare.com/ajax/libs/croppie/2.6.2/croppie.min.css");
 				head.load("//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css");
 				head.load("//ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.css");
 				head.load(cdnEndpoint + "js/linkify.min.js");
