use linkifyHtml instead of linkifyStr description may contain html entities (after being escaped)

--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -94,7 +94,7 @@
 				head.load("//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css");
 				head.load("//ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.css");
 				head.load(cdnEndpoint + "js/linkify.min.js");
-				head.load(cdnEndpoint + "js/linkify-string.min.js");
+				head.load(cdnEndpoint + "js/linkify-html.min.js");
 			};
 			script.src = cdnEndpoint + "js/head.load.min.js";
 			document.head.appendChild(script);
