SWC-4624 (awaiting facts, change based on intuition only)

--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -68,7 +68,7 @@
 				head.load("//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js");
 				head.load("//ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js");
 				head.load("https://cdn.pendo.io/agent/static/f155f8f7-30b9-4cc3-671a-70f99f803504/pendo.js");
-				head.load("//cdn.jsdelivr.net/npm/moment@2.22.2/min/moment.min.js");
+				head.load(cdnEndpoint + "js/moment.min.js");
 				head.load("//cdnjs.cloudflare.com/ajax/libs/jsPlumb/2.1.8/jsPlumb.min.js");
 				head.load("//cdnjs.cloudflare.com/ajax/libs/swfobject/2.2/swfobject.min.js");
 				head.load(cdnEndpoint + "js/jquery.tablesorter.min.js");
@@ -77,7 +77,7 @@
 				head.load("//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css");
 				head.load(cdnEndpoint + "js/highlight.pack.js");
 				head.load(cdnEndpoint + "js/init-nchart.js");
-				head.load("//cdn.jsdelivr.net/markdown-it/6.0.0/markdown-it.min.js");
+				head.load(cdnEndpoint + "js/markdown-it.min.js");
 				head.load(cdnEndpoint + "js/markdown-it-plugins-15.min.js");
 				head.load(cdnEndpoint + "js/polyfill-2.js");
 				head.load(cdnEndpoint + "js/details-shim.min.js");
