PORTALS-233: demo integration of SRC component

--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -95,6 +95,7 @@
 				head.load("//ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.css");
 				head.load(cdnEndpoint + "js/linkify.min.js");
 				head.load(cdnEndpoint + "js/linkify-string.min.js");
+				head.load(cdnEndpoint + "js/SRC/synapse-react-client.production.styles.css");
 			};
 			script.src = cdnEndpoint + "js/head.load.min.js";
 			document.head.appendChild(script);
