--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -145,7 +145,7 @@
 				<div id="alertContainer"></div>
 			</div>
 			<div id="initialLoadingUI" style="padding-top: 180px">
-				<div class="spinner" style="width:80px; height:80px; background-size:80px 80px;"> </div>
+				<div class="spinner displayBlock" style="width:80px; height:80px; background-size:80px 80px;"> </div>
 				<h4 style="color: #1e7098; margin-top: 10px; font-family: Sans-serif; text-align:center">Loading...</h4>
 			</div>
 			<div id="headerPanel" class="zeroOpacity"></div>
