SWC-4403: add additional padding to markdown ol and ul, and do not rely on css file to center initial loader

--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -144,8 +144,8 @@
 				<div id="alertContainer"></div>
 			</div>
 			<div id="initialLoadingUI" style="padding-top: 180px">
-				<div class="spinner displayBlock" style="width:80px; height:80px; background-size:80px 80px;"> </div>
-				<h4 style="color: #1e7098; margin-top: 10px; font-family: Sans-serif; text-align:center">Loading...</h4>
+				<div class="spinner" style="width:80px; height:80px; background-size:80px 80px;display: block;margin:auto;"> </div>
+				<h4 style="color: #1e7098; margin-top: 10px; font-family: Sans-serif; text-align:center">Loading&hellip;</h4>
 			</div>
 			<div id="headerPanel" class="zeroOpacity"></div>
 			<div id="rootPanel" class="zeroOpacity"></div>
