SWC-3981: use KaTeX

--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -94,6 +94,7 @@
 				head.load(cdnEndpoint + "js/linkify.min.js");
 				head.load(cdnEndpoint + "js/linkify-string.min.js");
 				head.load(cdnEndpoint + "js/SRC/synapse-react-client.production.styles.css");
+				head.load("//cdn.jsdelivr.net/npm/katex@0.10.1/dist/katex.min.css");
 			};
 			script.src = cdnEndpoint + "js/head.load.min.js";
 			document.head.appendChild(script);
