include katex version in css file name

--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -94,7 +94,7 @@
 				head.load(cdnEndpoint + "js/linkify.min.js");
 				head.load(cdnEndpoint + "js/linkify-string.min.js");
 				head.load(cdnEndpoint + "js/SRC/synapse-react-client.production.styles.css");
-				head.load(cdnEndpoint + "css/katex.min.css");
+				head.load(cdnEndpoint + "css/katex-0.10.1.min.css");
 			};
 			script.src = cdnEndpoint + "js/head.load.min.js";
 			document.head.appendChild(script);
