--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -84,6 +84,11 @@
 				head.load("//www.google-analytics.com/analytics.js");
 				head.load("//unpkg.com/react@16/umd/react.production.min.js");
 				head.load("//unpkg.com/react-dom@16/umd/react-dom.production.min.js");
+				head.load("https://unpkg.com/react-transition-group@2.6.0/dist/react-transition-group.min.js");
+				head.load("https://unpkg.com/prop-types@15.6.2/prop-types.min.js");
+				head.load("https://unpkg.com/react-measure@2.2.2/dist/index.umd.js");
+				head.load("https://unpkg.com/react-tooltip@3.9.2/standalone/react-tooltip.min.js");
+				head.load(cdnEndpoint + "js/SRC/synapse-react-client.production.min.js");
 				head.load("//cdnjs.cloudflare.com/ajax/libs/croppie/2.6.2/croppie.min.js");
 				head.load("//cdnjs.cloudflare.com/ajax/libs/spark-md5/3.0.0/spark-md5.min.js");
 				head.load(cdnEndpoint + "js/diff/diffview.css");
