--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -104,7 +104,9 @@
 				head.load("https://unpkg.com/prop-types@15.6.2/prop-types.min.js");
 				head.load("https://unpkg.com/react-measure@2.2.2/dist/index.umd.js");
 				head.load("https://unpkg.com/react-tooltip@3.9.2/standalone/react-tooltip.min.js");
-				head.load("https://unpkg.com/synapse-react-client@1.11.25/dist/umd/synapse-react-client.production.min.js");
+				head.load("https://cdn.plot.ly/plotly-1.44.0.min.js");
+				head.load("https://unpkg.com/react-plotly.js@2.2.0/dist/create-plotly-component.min.js");
+				head.load("https://unpkg.com/synapse-react-client@1.12.19/dist/umd/synapse-react-client.production.min.js");
 				head.load("//cdnjs.cloudflare.com/ajax/libs/croppie/2.6.2/croppie.min.js");
 				head.load("//cdnjs.cloudflare.com/ajax/libs/spark-md5/3.0.0/spark-md5.min.js");
 				head.load(cdnEndpoint + "js/diff/diffview.css");
@@ -114,7 +116,7 @@
 				head.load("//ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.css");
 				head.load(cdnEndpoint + "js/linkify.min.js");
 				head.load(cdnEndpoint + "js/linkify-string.min.js");
-				head.load("https://unpkg.com/synapse-react-client@1.11.25/dist/umd/synapse-react-client.production.styles.css");
+				head.load("https://unpkg.com/synapse-react-client@1.12.19/dist/umd/synapse-react-client.production.styles.css");
 				head.load(cdnEndpoint + "css/katex-0.10.1.min.css");
 			};
 			script.src = cdnEndpoint + "js/head.load.min.js";
