--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -119,6 +119,7 @@
 				head.load(cdnEndpoint + "js/linkify-string.min.js");
 				head.load("https://unpkg.com/synapse-react-client@1.12.22/dist/umd/synapse-react-client.production.styles.css");
 				head.load(cdnEndpoint + "css/katex-0.10.1.min.css");
+				head.load("//kh896k90gyvg.statuspage.io/embed/script.js");
 			};
 			script.src = cdnEndpoint + "js/head.load.min.js";
 			document.head.appendChild(script);
