--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -43,7 +43,7 @@
 			ga('create', 'UA-29804340-1', 'auto');
 			ga('send', 'pageview');
 		</script>
-
+		
 		<script>
 			// determine cdn endpoint (staging or prod, do not use a cdn for local or dev builds)
 			var cdnEndpoint = "//cdn-" + location.hostname + "/";
@@ -80,69 +80,73 @@
 				loadJs(src, false);
 			});
 			
-			[
-				'//ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js',
-				'//ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js',
-				cdnEndpoint + 'js/jquery.tablesorter.min.js',
-				cdnEndpoint + 'js/jquery.tablesorter.scinot.js',
-				'//cdnjs.cloudflare.com/ajax/libs/jsPlumb/2.11.1/js/jsplumb.min.js',
-				cdnEndpoint + 'js/init-nchart.js',
-				cdnEndpoint + 'js/xss.min.js'
-			].forEach(function(src) {
-				loadJs(src, false);
-			});
+			window.setTimeout(() => {
+				[
+					'//ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js',
+					'//ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js',
+					cdnEndpoint + 'js/jquery.tablesorter.min.js',
+					cdnEndpoint + 'js/jquery.tablesorter.scinot.js',
+					'//cdnjs.cloudflare.com/ajax/libs/jsPlumb/2.11.1/js/jsplumb.min.js',
+					cdnEndpoint + 'js/init-nchart.js',
+					cdnEndpoint + 'js/xss.min.js'
+				].forEach(function(src) {
+					loadJs(src, false);
+				});});
 
-			[
-				cdnEndpoint + 'js/markdown-it.min.js',
-				cdnEndpoint + 'js/markdown-it-plugins-18.min.js',
-				cdnEndpoint + 'js/linkify.min.js',
-				cdnEndpoint + 'js/linkify-string.min.js',
-				'//unpkg.com/react@16/umd/react.production.min.js',
-				'//unpkg.com/react-dom@16/umd/react-dom.production.min.js',
-				'//unpkg.com/react-transition-group@2.6.0/dist/react-transition-group.min.js',
-				'//unpkg.com/prop-types@15.6.2/prop-types.min.js',
-				'//unpkg.com/react-measure@2.2.2/dist/index.umd.js',
-				'//unpkg.com/react-tooltip@3.9.2/standalone/react-tooltip.min.js',
-				'//cdn.plot.ly/plotly-1.44.0.min.js',
-				'//unpkg.com/react-plotly.js@2.2.0/dist/create-plotly-component.min.js',
-				'//unpkg.com/react-jsonschema-form/dist/react-jsonschema-form.js',
-				'//unpkg.com/synapse-react-client@1.12.22/dist/umd/synapse-react-client.production.min.js'
-			].forEach(function(src) {
-				loadJs(src, false);
-			});
+			window.setTimeout(() => {
+				[
+					cdnEndpoint + 'js/markdown-it.min.js',
+					cdnEndpoint + 'js/markdown-it-plugins-18.min.js',
+					cdnEndpoint + 'js/linkify.min.js',
+					cdnEndpoint + 'js/linkify-string.min.js',
+					'//unpkg.com/react@16/umd/react.production.min.js',
+					'//unpkg.com/react-dom@16/umd/react-dom.production.min.js',
+					'//unpkg.com/react-transition-group@2.6.0/dist/react-transition-group.min.js',
+					'//unpkg.com/prop-types@15.6.2/prop-types.min.js',
+					'//unpkg.com/react-measure@2.2.2/dist/index.umd.js',
+					'//unpkg.com/react-tooltip@3.9.2/standalone/react-tooltip.min.js',
+					'//cdn.plot.ly/plotly-1.44.0.min.js',
+					'//unpkg.com/react-plotly.js@2.2.0/dist/create-plotly-component.min.js',
+					'//unpkg.com/react-jsonschema-form/dist/react-jsonschema-form.js',
+					'//unpkg.com/synapse-react-client@1.12.22/dist/umd/synapse-react-client.production.min.js'
+				].forEach(function(src) {
+					loadJs(src, false);
+				});});
 			
 			// load async js resources (order does not matter)
-			[
-				cdnEndpoint + 'js/moment.min.js',
-				cdnEndpoint + 'js/highlight.pack.js',
-				'//cdnjs.cloudflare.com/ajax/libs/pica/5.1.0/pica.min.js',
-				'//www.google-analytics.com/analytics.js',
-				'//cdnjs.cloudflare.com/ajax/libs/croppie/2.6.4/croppie.min.js',
-				'//kh896k90gyvg.statuspage.io/embed/script.js',
-				'//cdn.pendo.io/agent/static/f155f8f7-30b9-4cc3-671a-70f99f803504/pendo.js',
-				'//cdnjs.cloudflare.com/ajax/libs/spark-md5/3.0.0/spark-md5.min.js',
-				cdnEndpoint + 'js/polyfill-2.js',
-				cdnEndpoint + 'js/details-shim.min.js'
-			].forEach(function(src) {
-				loadJs(src, true);
-			});
-			
-			[
-				'//fonts.googleapis.com/css?family=Lato',
-				cdnEndpoint + 'swc.css',
-				cdnEndpoint + 'css/bootstrap-custom-theme.min.css?v=1',
-				cdnEndpoint + 'icons/font/synapseicons.css?v=1',
-				'//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css',
-				'//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.8/styles/default.min.css',
-				cdnEndpoint + 'js/diff/diffview.css',
-				cdnEndpoint + 'css/details-shim.min.css',
-				'//cdnjs.cloudflare.com/ajax/libs/croppie/2.6.4/croppie.min.css',
-				'//ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.css',
-				'//unpkg.com/synapse-react-client@1.12.22/dist/umd/synapse-react-client.production.styles.css',
-				cdnEndpoint + 'css/katex-0.10.1.min.css',
-			].forEach(function(src) {
-				loadCss(src);
-			});
+			window.setTimeout(() => {
+				[
+					cdnEndpoint + 'js/moment.min.js',
+					cdnEndpoint + 'js/highlight.pack.js',
+					'//cdnjs.cloudflare.com/ajax/libs/pica/5.1.0/pica.min.js',
+					'//www.google-analytics.com/analytics.js',
+					'//cdnjs.cloudflare.com/ajax/libs/croppie/2.6.4/croppie.min.js',
+					'//kh896k90gyvg.statuspage.io/embed/script.js',
+					'//cdn.pendo.io/agent/static/f155f8f7-30b9-4cc3-671a-70f99f803504/pendo.js',
+					'//cdnjs.cloudflare.com/ajax/libs/spark-md5/3.0.0/spark-md5.min.js',
+					cdnEndpoint + 'js/polyfill-2.js',
+					cdnEndpoint + 'js/details-shim.min.js'
+				].forEach(function(src) {
+					loadJs(src, true);
+				});});
+
+			window.setTimeout(() => {
+				[
+					'//fonts.googleapis.com/css?family=Lato',
+					cdnEndpoint + 'swc.css',
+					cdnEndpoint + 'css/bootstrap-custom-theme.min.css?v=1',
+					cdnEndpoint + 'icons/font/synapseicons.css?v=1',
+					'//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css',
+					'//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.8/styles/default.min.css',
+					cdnEndpoint + 'js/diff/diffview.css',
+					cdnEndpoint + 'css/details-shim.min.css',
+					'//cdnjs.cloudflare.com/ajax/libs/croppie/2.6.4/croppie.min.css',
+					'//ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.css',
+					'//unpkg.com/synapse-react-client@1.12.22/dist/umd/synapse-react-client.production.styles.css',
+					cdnEndpoint + 'css/katex-0.10.1.min.css',
+				].forEach(function(src) {
+					loadCss(src);
+				});});
 		</script>
 	</head>
 	<body id="body">
