try removing the statuspage load errors (invalid svg params)

--- a/src/main/webapp/Portal.html
+++ b/src/main/webapp/Portal.html
@@ -119,7 +119,7 @@
 			head.load("https://cdn.pendo.io/agent/static/f155f8f7-30b9-4cc3-671a-70f99f803504/pendo.js");
 			head.load("https://unpkg.com/synapse-react-client@1.12.22/dist/umd/synapse-react-client.production.styles.css");
 			head.load(cdnEndpoint + "css/katex-0.10.1.min.css");
-			head.load("//kh896k90gyvg.statuspage.io/embed/script.js");
+			// head.load("//kh896k90gyvg.statuspage.io/embed/script.js");
 		</script>
 	</head>
 	<body id="body">
